# Clautribution

./: Cargo.toml  Makefile  Readme.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
hooks/: hooks.json
plugin/: hooks.json
skills/drop/: SKILL.md
skills/preview/: SKILL.md
src/: main.rs  metadata.rs  preferences.rs  session.rs  transcript.rs  types.rs
src/decision/: mod.rs  tests.rs
src/transcript/: mod.rs  tests.rs
src/types/: mod.rs  tests.rs
tests/: cli.rs  e2e.rs  error_handling.rs  prompt_submit.rs  reset-interactive.sh  run-claude.sh  session_start.rs  stop.rs
tests/common/: mod.rs
