[package]
name = "claudtributter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
git2 = "0.20.4"
minijinja = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"

[dev-dependencies]
git2 = "0.20.4"
serde_json = "1"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
